package NYT.NCypressServer.NProto;

import "yt/core/misc/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TAccessStatisticsUpdate
{
	required NYT.NProto.TGuid node_id = 1;
	required int64 access_time = 2;
	required int64 access_counter_delta = 3;	
}

message TMetaReqUpdateAccessStatistics
{
	repeated TAccessStatisticsUpdate updates = 1;
}

////////////////////////////////////////////////////////////////////////////////

